# idp-lecture-finder

./: .gitignore  default.nix  flake.nix  pyproject.toml
idp_lecture_finder/: campus_api.py  llm.py  main.py
