[project]
name = "idp-lecture-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anki>=25.9.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.29",
    "langgraph>=1.0.1",
    "pydantic>=2.11.7",
    "pyzstd>=0.19.1",
    "requests>=2.32.4",
    "requests-cache>=1.3.1",
    "rich>=14.3.3",
]
