[project]
name = "idp-lecture-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.29",
    "langgraph>=1.0.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "rich>=14.2.0",
]

[project.scripts]
idp-lecture-finder = "idp_lecture_finder.main:main"
